[gd_scene load_steps=12 format=3 uid="uid://c5scpc4iadf17"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_j0xio"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="2_4udne"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/creation_information.gd" id="2_sqpln"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="3_e86ap"]
[ext_resource type="PackedScene" uid="uid://buskwt83mql4x" path="res://Scenes and Scripts/UI/ProblemSelection/particle_selection_info.tscn" id="3_gxgmm"]
[ext_resource type="PackedScene" uid="uid://rtdlfrcuvhi8" path="res://Scenes and Scripts/UI/ProblemSelection/problem_creation_info.tscn" id="5_224cs"]
[ext_resource type="PackedScene" uid="uid://bvn4ssrvphh28" path="res://Scenes and Scripts/UI/ProblemSelection/solution_creation_info.tscn" id="6_jjee5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0pnha"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ere8h"]
resource_local_to_scene = true
shader = ExtResource("3_e86ap")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rs86j"]
resource_local_to_scene = true
shader = ExtResource("3_e86ap")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_um0af"]
resource_local_to_scene = true
shader = ExtResource("3_e86ap")

[node name="CreationInformation" type="Control" node_paths=PackedStringArray("GrabAreas")]
material = ExtResource("1_j0xio")
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_sqpln")
GrabAreas = [NodePath("VBoxContainer/TitleContainer"), NodePath("VBoxContainer/TabContainer")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 124.0
offset_bottom = 998.0
theme_override_constants/separation = -4

[node name="TitleContainer" type="PanelContainer" parent="VBoxContainer"]
z_index = 1
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("2_4udne")

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
theme_override_font_sizes/font_size = 9
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
material = ExtResource("1_j0xio")
use_parent_material = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0pnha")
tabs_visible = false
tab_focus_mode = 0

[node name="ParticleSelectionInfo" parent="VBoxContainer/TabContainer" instance=ExtResource("3_gxgmm")]
material = SubResource("ShaderMaterial_ere8h")
layout_mode = 2
mouse_filter = 1

[node name="ProblemCreationInfo" parent="VBoxContainer/TabContainer" instance=ExtResource("5_224cs")]
visible = false
material = SubResource("ShaderMaterial_rs86j")
layout_mode = 2
mouse_filter = 1

[node name="SolutionCreationInfo" parent="VBoxContainer/TabContainer" instance=ExtResource("6_jjee5")]
visible = false
material = SubResource("ShaderMaterial_um0af")
layout_mode = 2
mouse_filter = 1

[connection signal="next" from="VBoxContainer/TabContainer/ParticleSelectionInfo" to="." method="_on_particle_selection_info_next"]
[connection signal="toggle_all" from="VBoxContainer/TabContainer/ParticleSelectionInfo" to="." method="_on_particle_selection_info_toggle_all"]
[connection signal="next" from="VBoxContainer/TabContainer/ProblemCreationInfo" to="." method="_on_problem_creation_info_next"]
[connection signal="previous" from="VBoxContainer/TabContainer/ProblemCreationInfo" to="." method="_on_problem_creation_info_previous"]
[connection signal="exit" from="VBoxContainer/TabContainer/SolutionCreationInfo" to="." method="_on_solution_creation_info_exit"]
[connection signal="previous" from="VBoxContainer/TabContainer/SolutionCreationInfo" to="." method="_on_solution_creation_info_previous"]
